<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">畜禽档案管理</string>
    <string name="action_settings">设置</string>
    <string name="action_add">添加</string>
    <string name="action_delete">删除</string>
    <string name="action_update">更新</string>
    <string name="action_refresh">刷新</string>
    <string name ="action_send">发送</string>
    <string name="submit">登陆</string>
    <string name="reset">重置</string>
    <string name="login">登陆</string>
    <string name="userid">用户名</string>
    <string name="password">密码</string>
    <string name="title_activity_work">工作</string>
    <string name="title_activity_feed_manager">饲料管理</string>
    <string name="title_activity_house_manager">圈舍管理</string>
    <string name="title_activity_medical_manager">医疗管理</string>
    <string name="title_activity_user_manager">用户管理</string>
    <string name="title_activity_base_data_manager">基础数据管理</string>
    <string name="feed_record">饲料变动记录</string>
    <string name="feeding_record">圈舍饲料使用记录</string>
    <string name="title_activity_feeding_record">圈舍饲料</string>
    <string name="title_activity_feed_record">饲料变动</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="query">查找</string>
    <string name="update">修改</string>
    <string name="House_operate">圈舍基本信息管理</string>
    <string name="death_process">死亡处理</string>
    <string name="production_record">生产记录</string>
    <string name="livestock_manage">圈舍畜禽管理</string>
    <string name="DeathProcess">死亡处理</string>
    <string name="quarantine_apply">检疫申报</string>
    <string name="title_activity_ProduceRecord">生产记录管理</string>
    <string name="title_activity_LivestockActivity">圈舍畜禽管理</string>
    <string name="title_activity_QuarantineaApplyActivity">检疫申报管理</string>
    <string name="title_activity_MedicineRecordActivity">兽药使用记录</string>
    <string name="title_activity_DesinfectRecordActivity">消毒记录</string>
    <string name="title_activity_ImmuneRecordActivity">免疫记录</string>
    <string name="title_activity_DiagnosisRecordActivity">诊疗记录</string>
    <string name="title_activity_AntiepidemicRecordActivity">防疫监测记录</string>
    <string name="user_info">用户基本信息管理</string>
    <string name="user_role">用户角色管理</string>
    <string name="title_activity_UserRoleActivity">用户角色管理</string>
    <string name="title_acticity_RoleAuthorizationActicity">角色授权管理</string>
    <string name="applycontactor">申请联系人管理</string>
    <string name="forbiddenmedicine">禁用药物管理</string>
    <string name="monitordep">监测部门管理</string>
    <string name="monitoritem">监测项目管理</string>
    <string name="feed_changeCount">变动数量</string>
    <string name="feed_batchNumber">产品批号</string>
    <string name="feed_feedName">饲料名称</string>
    <string name="feed_factory">生产产家</string>
    <string name="feed_remark">备    注</string>
    <string name="feed_changeType">变动类型</string>
    <string name="feed_changeDate">变动时间</string>
    <string name="feeding_feed_name">饲料名称</string>
    <string name="feeding_factory">生产产家</string>
    <string name="feeding_houseid">圈舍编号</string>
    <string name="feeding_batchNumber">产品批号</string>
    <string name="feeding_starttime">开始时间</string>
    <string name="feeding_endtime">结束时间</string>
    <string name="feeding_animalType">畜禽类型</string>
    <string name="feeding_livestockCount">畜禽数量</string>
    <string name="feeding_dosage">饲料用量</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="user_userid">用户名</string>
    <string name="user_realname">姓名</string>
    <string name="user_department">部门</string>
    <string name="user_usergroup">用户组</string>
    <string name="user_userpermission">权限</string>
    <string name="user_sex">性别</string>
    <string name="user_phone">电话</string>
    <string name="user_address">地址</string>
    <string name="user_postcode">邮编</string>
    <string name="user_email">邮箱</string>
    <string name="title_activity_user_group_permission">用户组权限管理</string>
    <string name="title_activity_apply_contact">申报联系人管理</string>
    <string name="title_activity_forbidden_medicine">禁用药品管理</string>
    <string name="title_activity_monitor_department">监控部门管理</string>
    <string name="title_activity_monitor_item">监控项目管理</string>
    <string name="apply_contact_id">编号</string>
    <string name="apply_contact_name">联系人</string>
    <string name="apply_contact_sex">性别</string>
    <string name="apply_contact_phone">电话</string>
    <string name="apply_contact_area">地区</string>
    <string name="forbidden_medicine_id">编号</string>
    <string name="forbidden_medicine_name">药品名称</string>
    <string name="forbidden_medicine_animal">禁用动物</string>
    <string name="forbidden_medicine_usage">禁用用途</string>
    <string name="department_name">部门名</string>
    <string name="department_address">地址</string>
    <string name="department_tellphone">电话</string>
    <string name="department_contact_name">联系人</string>
    <string name="house_base_info_house_id">圈舍编号：</string>
    <string name="house_base_info_animalType">畜禽类型：</string>
    <string name="house_base_info_livestockCount">畜禽数量：</string>
    <string name="death_process_date">处理日期</string>
    <string name="death_process_department">处理部门</string>
    <string name="death_process_livestock">处理畜禽</string>
    <string name="death_process_reason">死亡原因</string>
    <string name="death_process_remark">备注</string>
    <string name="livestock_id">编号</string>
    <string name="livestock_create_time">入圈时间</string>
    <string name="livestock_type">畜禽类型</string>
    <string name="producing_record_houseid">圈舍编号</string>
    <string name="producing_record_changeDate">变动时间</string>
    <string name="producing_record_changeType">变动类型</string>
    <string name="producing_record_changeCount">变动数量</string>
    <string name="title_activity_add_feed">添加饲料变动记录</string>
    <string name="title_activity_update_feed">更新饲料变动记录</string>
    <string name="add_feed">饲料变动记录</string>
    <string name="update_feed">更新饲料变动记录</string>
    <string name="add_submit">添加</string>
    <string name="add_cancel">取消</string>
    <string name="title_activity_add_feeding">添加圈舍饲料使用记录</string>
    <string name="title_activity_update_feeding">修改圈舍饲料使用记录</string>
    <string name="add_feeding_title">饲料使用记录</string>
    <string name="record_time">月份</string>
    <string name="month">月</string>
    <string name="title_activity_add_house">添加圈舍</string>
    <string name="title_activity_update_house">修改圈舍</string>
    <string name="title_activity_add_death_process">写死亡处理记录</string>
    <string name="title_activity_add_livestock">添加畜禽</string>
    <string name="title_activity_add_producing_record">写生产记录</string>
    <string name="title_activity_add_user">添加用户</string>
    <string name="title_activity_add_quarantine_apply">检疫校审</string>
    <string name="title_activity_add_disinfect_record">写消毒记录</string>
    <string name="pre_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="go">Go</string>
    <string name="refresh">刷新</string>
    <string name="disinfect_date">消毒日期</string>
    <string name="disinfect_place">消毒地点</string>
    <string name="disinfect_medicine">消毒药品</string>
    <string name="medicine_factory">药品产家</string>
    <string name="disinfect_dosage">药品用量</string>
    <string name="disinfect_method">消毒方式</string>
    <string name="disinfect_operator">操作员</string>
    <string name="select_date">选择时间</string>
    <string name="query_start_time">起始时间</string>
    <string name="query_end_time">终止时间</string>
    <string name="query_condition">输入查询条件</string>
    <string name="select">选择</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="year">年</string>
    <string name="fresh">刷新</string>
    <string name="medicalManage">医疗管理</string>
    <string name="jianyi">检疫审核</string>
    
	<string name="menu">菜单</string>
	<string name="userinfo">用户信息</string>
	
	<string name="medicine_startTime">开始时间</string>
	<string name="medicine_productName">药品名称</string>
	<string name="medicine_medicineType">药品类型</string>
	<string name="medicine_standard">规格</string>
	<string name="medicine_validityPeriod">有效期</string>
	<string name="medicine_batchNumber">批号</string>
	<string name="medicine_dosage">用量</string>
	<string name="medicine_endTime">结束时间</string>
	
	<string name="immunization_immunizationTime">免疫时间</string>
	<string name="immunization_userid">用户编号</string>
	<string name="immunization_houseid">圈舍号</string>
	<string name="immunization_totalCount">免疫数量</string>
	<string name="immunization_vaccine">疫苗</string>
	<string name="immunization_vaccineFactory">疫苗产商</string>
	<string name="immunization_batchNumber">批号</string>
	<string name="immunization_dosage">用量</string>
	<string name="immunization_immunizationMethod">免疫方式</string>
	
	<string name="diagnosis_diagnosisDate">诊断时间</string>
	<string name="diagnosis_livestockid">禽畜编号</string>
	<string name="diagnosis_age">年龄</string>
	<string name="diagnosis_reason">原因</string>
	<string name="diagnosis_doctor">医生</string>
	<string name="diagnosis_medicine">药物</string>
	<string name="diagnosis_method">处理方式</string>
	<string name="diagnosis_result">处理结果</string>
	
	<string name="antiepidemic_antiepidemicDate">日期</string>
	<string name="antiepidemic_userid">用户编号</string>
	<string name="antiepidemic_houseid">圈舍号</string>
	<string name="antiepidemic_monitorItem">监测项目</string>
	<string name="antiepidemic_sampleCount">数量</string>
	<string name="antiepidemic_department">监测部门</string>
	<string name="antiepidemic_monitorResult">监测结果</string>
	<string name="antiepidemic_dealResult">处理结果</string>
	
	<string name="quarantine_apply_date">申报时间</string>
    <string name="quarantine_flag">申报状态</string>
    <string name="quarantine_operator">操作员</string>
    <string name="quarantine_count">检疫数量</string>
    <string name="quarantine_user">用户编号</string>
    <string name="quarantine_sign">标示</string>
     <string name="quarantine_result">检查结果</string>
	
    <string name="medicine_record">兽药使用记录</string>
    <string name="desinfect_record">消毒记录</string>
    <string name="immune_record">免疫记录</string>
    <string name="diagnosis_record">诊疗记录</string>
    <string name="antiepidemic_record">监测记录</string>
   	<string name="quarantine_name">检疫处理</string>
	<string name="quarantine_quarantine">审核</string>
	<string name="reject">拒绝</string>
	<string name="modify_quarantine">确定</string>
	
	
	<string name="transparent">#000000</string>
</resources>
