<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/jianyi"
            android:textSize="26sp"
            />
        
        <Button android:id="@+id/buttonFresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fresh"
            android:layout_marginLeft="30dp" />

        <Button
            android:id="@+id/buttonRefuse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/reject" />

    </LinearLayout>
    <ListView ></ListView>

</LinearLayout>
